compiler/syntax/tests/parsing/errors/expressions/stringLiteral.res
switch x {
| "\055" => ()
| "\123" => ()
}
